--- a/generator/index.template
+++ b/generator/index.template
@@ -20,5 +20,9 @@
 			<h1>Pictures of my Models</h1>
 		</div>
 $$index_image$$
+		<div class="w3-container w3-center w3-border-top w3-margin-top w3-margin-left m3-margin-right">
+			<p>For information about commissions: <a href="mailto:commissions@picturesofmymodels.com">commissions@picturesofmymodels.com</a></p>
+			<p>For anything else: <a href="mailto:info@picturesofmymodels.com">info@picturesofmymodels.com</a></p>
+		</div>
 	</body>
 </html>
