--- a/generator/index.template
+++ b/generator/index.template
@@ -16,13 +16,52 @@
 		</style>
 	</head>
 	<body class="w3-2017-shaded-spruce">
-		<div class="w3-container w3-center w3-border-bottom w3-margin-bottom w3-margin-left w3-margin-right">
+		<div class="w3-container w3-center w3-border-bottom w3-margin-left w3-margin-right">
 			<h1>Pictures of my Models</h1>
 		</div>
+		<div class="w3-container w3-center w3-border-bottom w3-margin-bottom w3-margin-left w3-margin-right">
+			<button id="showAll" class="w3-button filter" style="display: none" onclick="filter(this)" disabled>Show All</button>
+			<button id="40k" class="w3-button filter" onclick="filter(this)">Warhammer 40000</button>
+			<button id="AoS" class="w3-button filter" onclick="filter(this)">Age of Sigmar</button>
+			<button id="Other" class="w3-button filter" onclick="filter(this)">Other</button>
+			<button id="Extra" class="w3-button filter" onclick="filter(this)">Extra</button>
+		</div>
+		<div class="w3-row">
 $$index_image$$
+		</div>
 		<div class="w3-container w3-center w3-border-top w3-margin-top w3-margin-left m3-margin-right">
 			<p>For information about commissions: <a href="mailto:commissions@picturesofmymodels.com">commissions@picturesofmymodels.com</a></p>
 			<p>For anything else: <a href="mailto:info@picturesofmymodels.com">info@picturesofmymodels.com</a></p>
 		</div>
+		<script>
+			function filter(button) {
+				var albums = document.getElementsByClassName("album");
+				var buttons = document.getElementsByClassName("filter");
+				for(var i = 0; i < albums.length; i++) {
+					if( !albums[i].classList.contains("Extra") ) {
+						albums[i].style.display = "block";
+					} else {
+						albums[i].style.display = "none";
+					}
+				}
+				for(var i = 0; i < buttons.length; i++) {
+					buttons[i].disabled = false;
+				}
+				button.disabled = true;
+				if( button.id === "showAll" ) {
+					document.getElementById("showAll").style.display = "none";
+					return;
+				} else {
+					document.getElementById("showAll").style.display = "inline-block";
+				}
+				for(var i = 0; i < albums.length; i++) {
+					if( !albums[i].classList.contains(button.id) ) {
+						albums[i].style.display = "none";
+					} else {
+						albums[i].style.display = "block";
+					}
+				}
+			}
+		</script>
 	</body>
 </html>
